<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Fooddy</string>
    <string name="personal_information">Personal Information</string>
    <string name="menu_settings">Settings</string>
    <string name="name">Name</string>
    <string name="age_years">Age(years)</string>
    <string name="height_centimeters">Height(centimeters)</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="lifestyle_active">Active</string>
    <string name="lifestyle_sedentary">Sedentary</string>
    <string name="lifestyle_hard">Hard physical work</string>
    <string name="lifestyle_pregnant">Pregnant</string>
    <string name="lifestyle_breast_feading">Breast-feeding</string>
    <string name="btn_continue">Continue</string>
    <string name="reg_dialog_not_fill">Please, fill all input fields for continue.</string>
    <string name="btn_ok">ОК</string>
    <string name="skin_color">Skin Color</string>
    <string name="vitamines">Vitamines</string>
    <string name="minerals">Minerals</string>
    <string name="food">Food</string>
    <string name="create_diet">Create Diet</string>
    <string name="diet">Menu</string>
    <string name="description">Description</string>
    <string name="today">Today</string>
    <string name="add_meal">Add Meal</string>
    <string name="change_date">Change Date</string>
    <string name="meal">Meal</string>
    <string name="time">Time</string>
    <string name="add_item">Add</string>
    <string name="change_time">Change Time</string>
    <string name="add_food">Add Food</string>

</resources>