<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Registration" >
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dip"
        android:layout_marginTop="53dp"
        android:background="@drawable/bg_shape">

    <LinearLayout
        android:id = "@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding = "10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/personal_information"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:textColor="@color/text_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:text="@string/name"
                android:textSize="16dip" 
            	android:textStyle="bold"
            	android:textColor="@color/text_color"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName" 
            	android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:text="@string/age_years"
                android:textSize="16dip" 
            	android:textStyle="bold"
            	android:textColor="@color/text_color"/>

            <EditText
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" 
           		android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:text="@string/height_centimeters"
                android:textSize="16dip" 
            	android:textStyle="bold"
            	android:textColor="@color/text_color"/>

            <EditText
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" 
            	android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dip"
                android:text="@string/sex"
                android:textSize="16dip"
                android:textStyle="bold" 
            	android:textColor="@color/text_color"/>

            <Spinner
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
            	android:textColor="@color/text_color"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dip"
                android:text="@string/lifestyle"
                android:textSize="16dip"
                android:textStyle="bold" 
            	android:textColor="@color/text_color"/>

            <Spinner
                android:id="@+id/lifestyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
            	android:textColor="@color/text_color"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip" 
            android:layout_marginBottom="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:text="@string/skin_color"
                android:textSize="16dip"
                android:textStyle="bold" 
            	android:textColor="@color/text_color"/>
            
            <olga.com.healthy.food.ui.controls.SkinColorSlider
			    android:id="@+id/skin_color"
			    android:layout_width="match_parent"
			    android:layout_height="14dip"
                android:layout_gravity="center"
                android:background="@drawable/skin_color_shape" />

        </LinearLayout>

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_continue" 
            android:textSize="20dip"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
    </LinearLayout>
	</ScrollView>

	</LinearLayout>
</LinearLayout>