<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Registration" >
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/title" />

    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/bg_shape"
            android:padding="5dip">

            <TextView
                android:id="@+id/day_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="2dip"
                android:text="@string/today"
                android:textColor="@color/text_color" />
            
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="2dip"
                android:text="01-Jan-2012"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="00:00"
                android:textColor="@color/text_color" />

            <Button
                android:id="@+id/change_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/change_date" />

        </LinearLayout>

       <LinearLayout
           android:id="@+id/add_meal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="2dip"
           android:background="@drawable/bg_shape"
           android:orientation="vertical"
           android:padding="5dip" >

           <TextView
               android:id="@+id/date"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/add_meal"
               android:textColor="@color/text_color" />

       </LinearLayout>

    </LinearLayout>

</LinearLayout>